--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
         <link rel="manifest" href="./manifest.json" />
         <title>React App</title>
         <script defer="defer" src="./static/js/main.43b6174b.js"></script>
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript">
+            (function (m, e, t, r, i, k, a) {
+                m[i] =
+                    m[i] ||
+                    function () {
+                        (m[i].a = m[i].a || []).push(arguments);
+                    };
+                m[i].l = 1 * new Date();
+                for (var j = 0; j < document.scripts.length; j++) {
+                    if (document.scripts[j].src === r) {
+                        return;
+                    }
+                }
+                (k = e.createElement(t)),
+                    (a = e.getElementsByTagName(t)[0]),
+                    (k.async = 1),
+                    (k.src = r),
+                    a.parentNode.insertBefore(k, a);
+            })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
+
+            ym(96236586, 'init', {
+                clickmap: true,
+                trackLinks: true,
+                accurateTrackBounce: true,
+                webvisor: true,
+            });
+        </script>
+        <noscript
+            ><div>
+                <img src="https://mc.yandex.ru/watch/96236586" style="position: absolute; left: -9999px" alt="" /></div
+        ></noscript>
+        <!-- /Yandex.Metrika counter -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
