--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
                     a.parentNode.insertBefore(k, a);
             })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
 
-            ym(96236586, 'init', {
+            ym(96253669, 'init', {
                 clickmap: true,
                 trackLinks: true,
                 accurateTrackBounce: true,
                 webvisor: true,
+                ecommerce: 'dataLayer',
             });
         </script>
         <noscript
             ><div>
-                <img src="https://mc.yandex.ru/watch/96236586" style="position: absolute; left: -9999px" alt="" /></div
+                <img src="https://mc.yandex.ru/watch/96253669" style="position: absolute; left: -9999px" alt="" /></div
         ></noscript>
         <!-- /Yandex.Metrika counter -->
     </head>
